# Origraph

./: .gitignore  README.md
extension/: README.md
frontend/backend/: app.py  requirements.txt
frontend/src/ai/: dev.ts
frontend/src/ai/flows/: detect-watermark-flow.ts  embed-hidden-text-watermark.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/watermark/detect/: route.ts
frontend/src/app/api/watermark/embed/: route.ts
frontend/src/app/api/watermark/strip/: route.ts
frontend/src/components/: watermark-tool.tsx
invisible-text-watermark/: README.md  pyproject.toml
invisible-text-watermark/src/invisible_text_watermark/: __init__.py  config.py  payload.py  watermark.py  zero_width.py
invisible-text-watermark/src/invisible_text_watermark/integrations/: __init__.py  anthropic_wrapper.py  google_wrapper.py  openai_wrapper.py
invisible-text-watermark/tests/: test_core.py
minimax-webui/: app.py
minimax-webui/static/: index.html
origraph-registry-demo/: README.md
